[package]
name = "passhasher"
version = "1.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
argon2 = { version = "0.5", features = ["rand"] }
clap = { version = "4.1.8", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
